--- a/FavoritePictures/FavoritePictures/FavoritePictures/FavoriteImagesTableViewCell.xib
+++ b/FavoritePictures/FavoritePictures/FavoritePictures/FavoriteImagesTableViewCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="534" height="507"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BqZ-jL-NMa">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BqZ-jL-NMa">
                         <rect key="frame" x="20" y="11" width="494" height="485"/>
                     </imageView>
                 </subviews>
